# dawn

./: .bazelrc  .clang-format  .clang-tidy  .gclient_previous_custom_vars  .gclient_previous_sync_commits  .gitignore  .gitmodules  .gn  AUTHORS  AndroidManifest.xml  BUILD.bazel  BUILD.gn  CMakeLists.txt  CODE_OF_CONDUCT.md  DEPS  Doxyfile  LICENSE  OWNERS  PRESUBMIT.py  README.chromium  README.md  WORKSPACE.bazel  add_missing_entry_point.py  build_mesa.ps1  build_mesa_and_dawn.ps1  buildbucket.config  chumpdetector.config  codereview.settings  common.gni  compile_commands.json  cr-buildbucket.cfg  dawn.json  dawn_generator.gni  dawn_lpm.json  dawn_wire.json  dotfile_settings.gni  go.mod  go.sum  go_presubmit_support.py  gpu_info.json  (+11 more)
build_overrides/: angle.gni  build.gni  dawn.gni  glslang.gni  gtest.gni  partition_alloc.gni  shaderc.gni  spirv_tools.gni  swiftshader.gni  tint.gni  vulkan_common.gni  vulkan_headers.gni  vulkan_loader.gni  vulkan_tools.gni  vulkan_utility_libraries.gni  vulkan_validation_layers.gni  wayland.gni
emscripten/: BUILD.gn  concat.py  generate_library_webgpu_struct_info.sh  generate_webgpu_struct_info.sh  library_webgpu.js  library_webgpu_struct_info_generated.js  webgpu.cpp  webgpu_struct_info_generated32.json  webgpu_struct_info_generated64.json
emscripten/snippets/: library_webgpu_struct_info_part3.txt
generator/: BUILD.gn  CMakeLists.txt  LICENSE  common.py  dawn_common_generator.py  dawn_generator.gni  dawn_gpu_info_generator.py  dawn_json_generator.py  dawn_lpm_helpers.py  dawn_version_generator.py  extract_json.py  generator_lib.gni  generator_lib.py  main.py  opengl_loader_generator.py  supported_extensions.json  tint_gen_template.py  tint_generator.gni  wire_cmd.py  yml_to_json.go
generator/templates/: BSD_LICENSE  api.c  api.h  api_cpp.cpp  api_cpp.h  api_cpp_chained_struct.h  api_cpp_constants.h  api_cpp_enums.h  api_cpp_forward.h  api_cpp_impl.h  api_cpp_objects.h  api_cpp_print.h  api_cpp_structs.h  api_native_proc.cpp  api_proc_def_inl.h  api_struct_info.json  apicpp.cpp  apicpp.h  dawn.h  dawn_proc.c  dawn_proc_table.h  dawn_thread_dispatch_proc.cpp  dawncpp.h  jstrace.cpp  library_api_enum_tables.js  library_webgpu_enum_tables.js  mock_api.cpp  mock_api.h  mock_webgpu.cpp  mock_webgpu.h  target_api.h  webgpu.h  webgpu_cpp.cpp  webgpu_cpp.h  webgpu_cpp_print.h  webgpu_struct_info.json  wgpu_dawn_native_proc.cpp  wgpu_dawn_proc.cpp
scripts/: dawn_component.gni  dawn_features.gni  dawn_overrides_with_defaults.gni  dawn_test.gni  dawn_test_for_fuchsia.gni  extract.py  generate_seed_corpus_from_tests.py  lint_clang_format.sh  path_exists.py  perf_test_runner.py  rm.py  roll-shader-deps.sh  roll-shaderc-deps  roll-shaderc-deps.sh  standalone-with-node.gclient  tint_overrides_with_defaults.gni  travis_lint_format.sh  update_fuzzer_seed_corpus.sh
src/common/: Assert.cpp  Assert.h  BUILD.gn  BitSetIterator.h  CMakeLists.txt  Compiler.h  CompressedPerSubresource.h  Constants.h  DynamicLib.cpp  EnumClassBitmask.h  GPUInfo.cpp  GPUInfo.h  HashUtils.h  LinkedList.h  Log.cpp  Log.h  Math.cpp  Math.h  NSRef.h  PlacementAllocated.h  Platform.h  PoolAllocator.cpp  PoolAllocator.h  Preprocessor.h  RefBase.h  RefCounted.cpp  RefCounted.h  Result.h  SerialMap.h  SerialQueue.h  SerialStorage.h  SlabAllocator.cpp  SlabAllocator.h  StackContainer.h  SystemUtils.cpp  SystemUtils.h  TypeIndexedArray.h  TypeIndexedSpan.h  TypedBitset.h  TypedInteger.h  (+16 more)
src/dawn_native/: Adapter.cpp  Adapter.h  Allocator.cpp  Allocator.h  AsyncTask.cpp  AsyncTask.h  AttachmentState.cpp  AttachmentState.h  BUILD.gn  BackendConnection.cpp  BackendConnection.h  BindGroup.cpp  BindGroup.h  BindGroupAndStorageBarrierTracker.h  BindGroupAndUsageTracker.h  BindGroupLayout.cpp  BindGroupLayout.h  BindGroupTracker.h  BindingInfo.cpp  BindingInfo.h  BlendState.cpp  BlendState.h  BlitTextureForBrowserHelper.cpp  BlitTextureForBrowserHelper.h  BuddyAllocator.cpp  BuddyAllocator.h  BuddyMemoryAllocator.cpp  BuddyMemoryAllocator.h  BuddyResourceHeapAllocator.cpp  BuddyResourceHeapAllocator.h  Buffer.cpp  Buffer.h  Builder.cpp  Builder.h  CMakeLists.txt  CachedObject.cpp  CachedObject.h  CallbackQueue.cpp  CallbackQueue.h  CallbackTaskManager.cpp  (+200 more)
src/dawn_wire/: BUILD.gn  BufferConsumer.h  CMakeLists.txt  ChunkedCommandHandler.cpp  ChunkedCommandHandler.h  ChunkedCommandSerializer.h  DawnWire.cpp  Wire.cpp  WireClient.cpp  WireClient.h  WireClientDoers.cpp  WireClientObjectAllocator.h  WireClientObjects.cpp  WireClientObjects.h  WireCommandSerializer.cpp  WireDeserializeAllocator.cpp  WireDeserializeAllocator.h  WireServer.cpp  WireServer.h  WireServerCallbacks.cpp  WireServerDoers.cpp  WireServerObjectStorage.h
src/fuzzers/: BUILD.gn  DawnSPIRVCrossFuzzer.cpp  DawnSPIRVCrossFuzzer.h  DawnSPIRVCrossGLSLFastFuzzer.cpp  DawnSPIRVCrossGLSLFullFuzzer.cpp  DawnSPIRVCrossGLSLFuzzer.cpp  DawnSPIRVCrossHLSLFastFuzzer.cpp  DawnSPIRVCrossHLSLFuzzer.cpp  DawnSPIRVCrossMSLFastFuzzer.cpp  DawnSPIRVCrossMSLFuzzer.cpp  DawnSPIRVToolsBinaryParserFuzzer.cpp  DawnSPVCglslFastFuzzer.cpp  DawnSPVCglslNoValidationFastFuzzer.cpp  DawnSPVChlslFastFuzzer.cpp  DawnSPVChlslNoValidationFastFuzzer.cpp  DawnSPVCmslFastFuzzer.cpp  DawnSPVCmslNoValidationFastFuzzer.cpp  DawnVulkanSwiftshaderFuzzerTest.cpp  DawnWireServerAndD3D12BackendFuzzer.cpp  DawnWireServerAndFrontendFuzzer.cpp  DawnWireServerAndVulkanBackendFuzzer.cpp  DawnWireServerFuzzer.cpp  StandaloneFuzzerMain.cpp
src/tests/: BUILD.gn  DawnNativeTest.cpp  DawnNativeTest.h  DawnTest.cpp  DawnTest.h  DawnTest_ns.mm  End2EndTestsMain.cpp  MockCallback.h  ParamGenerator.h  ToggleParser.cpp
src/tint/: BUILD.bazel  BUILD.cmake  BUILD.gn  CMakeLists.txt  OWNERS  builtin_table.cc  builtin_table.inl  builtin_table_test.cc  builtins.def  castable.cc  castable.h  castable_bench.cc  castable_test.cc  clone_context.cc  clone_context.h  clone_context_test.cc  debug.h  flags.bzl  (+27 more)
webgpu-cts/: BUILD.gn  PRESUBMIT.py  README.md  compat-expectations.txt  expectations.txt  expectations.txt.orig  slow_tests.txt  test_page.html  test_runner.js  worker_test_globs.txt
(+16541 files in other folders)
