# Copyright 2018 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains variables that can be imported into a repo's dotfile (.gn)
# to make it easier to roll new versions of ANGLE in.

exec_script_whitelist = [ get_path_info(
        "third_party/vulkan-validation-layers/BUILD.gn",
        "abspath") ]
