# Copyright 2023 The Dawn Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Override settings for third_party integration with Google Test.

# Exclude support for registering main function in multi-process tests.
gtest_include_multiprocess = true

# Exclude support for platform-specific operations across unit tests.
gtest_include_platform_test = true

# Exclude support for testing Objective C code on OS X and iOS.
gtest_include_objc_support = true

# Exclude support for flushing coverage files on iOS.
gtest_include_ios_coverage = true
