# Copyright 2023 The Dawn Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# See base/allocator/partition_allocator/external_builds.md
enable_backup_ref_ptr_slow_checks_default = false
enable_backup_ref_ptr_support_default = false
enable_dangling_raw_ptr_checks_default = false
enable_mte_checked_ptr_support_default = false
put_ref_count_in_previous_slot_default = false
use_partition_alloc_as_malloc_default = false
