# Copyright 2022 The Dawn Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Dawn had not wayland third_party/
wayland_gn_dir = ""

# Defaults from SwiftShader
use_system_libwayland = true
ozone_platform_wayland = true
