# Copyright 2022 The Chromium Authors.  All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Note: This file is intentionally not used by any other BUILD.gn in Dawn.
# Instead, Chromium depends directly on this file to build the WebGPU CTS.
# Scripts called from this file assume Dawn is checked out inside Chromium.

# This needs to be copied to the output directory since the CTS tests also
# serve resources that are copied into it.
copy("webgpu_cts_test_page") {
  testonly = true
  sources = [ "test_page.html" ]
  outputs = [ "$target_gen_dir/test_page.html" ]
}

copy("webgpu_cts_js") {
  testonly = true
  sources = [ "test_runner.js" ]
  outputs = [ "$target_gen_dir/test_runner.js" ]
}

group("webgpu-cts") {
  testonly = true
  data_deps = [
    ":webgpu_cts_js",
    ":webgpu_cts_test_page",
    "../third_party/gn/webgpu-cts",
  ]
  data = [
    "//third_party/node/",
    "./scripts",
    "./expectations.txt",
    "../third_party/webgpu-cts/src",
    "../third_party/webgpu-cts/node.tsconfig.json",
    "../third_party/webgpu-cts/tsconfig.json",
  ]
}
