# This needs to be copied to the output directory since the CTS tests also
# serve resources that are copied into it.
copy("webgpu_cts_test_page") {
  testonly = true
  sources = [ "test_page.html" ]
  outputs = [ "$target_gen_dir/test_page.html" ]
}

copy("webgpu_cts_js") {
  testonly = true
  sources = [ "test_runner.js" ]
  outputs = [ "$target_gen_dir/test_runner.js" ]
}

group("webgpu-cts") {
  testonly = true
  data_deps = [
    ":webgpu_cts_js",
    ":webgpu_cts_test_page",
    "../third_party/gn/webgpu-cts",
  ]
  data = [
    "//third_party/node/",
    "../third_party/webgpu-cts",
    "../third_party/node.tsconfig.json",
    "../third_party/tsconfig.json",
  ]
}
